Working on creeping

--- a/continuity.tex
+++ b/continuity.tex
@@ -82,7 +82,7 @@ add up the other two directions. In doing so, we obtain
 \begin{equation}
   \label{eq:continuity0}
   \frac{\partial \rho}{\partial t} =
-  -\frac{\partial  \rho  u_x}{\partial x
+  -\frac{\partial  \rho  u_x}{\partial x}
     -\frac{\partial  \rho  u_y}{\partial y}
     -\frac{\partial  \rho  u_z}{\partial z}  =
     -\nabla\cdot ( \rho  \bfu) .
