--- a/chapter_viscous.tex
+++ b/chapter_viscous.tex
@@ -16,6 +16,11 @@
 
 \input{Poiseuille}
 
+\input{Taylor_Green}
+
+% \input{sound_waves_att}
+
+
 \input{NS_solutions_exercises}
 
 \chapter{The overdamped limit}
