--- a/continuity.tex
+++ b/continuity.tex
@@ -124,8 +124,8 @@ be equal. This fact leads to the same expression as before.
 
 
 \subsection{Incompressibility}
-
-By ``incompressible'' it is usually meant that variations in $\rho$
+\index{incompressibility}
+By ``incompressibility'', it could be meant that variations in $\rho$
 (spatial or temporal) are negligible. Continuity then readily implies:
 \[
 \nabla \cdot  \bfu  = 0 ,
@@ -135,9 +135,10 @@ is ``solenoidal'', as an analogy with the magnetic field. The latter,
 as no magnetic charges (``monopoles'') have ever been seen, satisfies
 this equation.
 
-A technical issue is incompressibility is often defined as $\nabla
-\cdot \bfu = 0 $. This does \emph{not} imply that $\rho$ is constant,
-even though its reverse is true. Indeed, in this case:
+Indeed, this is sometimes the meaning of the term.  A technical issue
+is incompressibility is often defined, rather, as
+$\nabla \cdot \bfu = 0 $. This does \emph{not} imply that $\rho$ is
+constant, even though its reverse is true. Indeed, in this case:
 \[
 \frac{\partial \rho }{\partial t} +  \nabla \cdot (\rho \bfu ) =
 \frac{\partial \rho }{\partial t} +   \bfu \cdot \nabla \rho
@@ -152,3 +153,6 @@ As will be discussed in \ref{sec:continuity2}, this means that the
 total (or ``convective'') time derivative of $\rho$ is zero. This
 implies that $\rho$ is constant at every moving particle, or along
 streamlines.
+
+In order to make the distiction clear, the term ``divergence-free'' (or
+``divergence-less'') is sometimes used.\index{divergence-free}
