--- a/intro.tex
+++ b/intro.tex
@@ -1,4 +1,4 @@
-\chapter*{Introduction}
+\chapter*{Foreword}
 
 Just a compilation of notes on different aspects of fluid
 dynamics I have collected over the years.
@@ -15,3 +15,13 @@ Daniel Duque \\
 CEHINAV (Naval Model Basin Research Group) \\
 Universidad Polit\'ecnica de Madrid \\
 Madrid, Spain 2018
+
+
+
+
+\chapter{Introduction}
+
+
+
+\section{Notation}
+
