--- a/chapter_inviscid.tex
+++ b/chapter_inviscid.tex
@@ -15,11 +15,7 @@
 
 \chapter{Sound waves}
 
-%\input{sound_waves}
-
-\section{Linearization}
-
-\section{Mach's number and compressibility}
+\input{sound_waves}
 
 
 \chapter{Potential flow}
