--- a/creeping.tex
+++ b/creeping.tex
@@ -306,7 +306,7 @@ important.
 \begin{figure}
   \centering
   \begin{minipage}{0.45\textwidth}
-      \includegraphics[width=\textwidth]{SD}
+      \includegraphics[width=\textwidth]{figures/SD}
   \end{minipage}
   \caption{Plot of $1/(q^2+q)$ function
     \label{fig:SD}}
